feat: implement complete booking, payment, account, and admin platform
- Implement real authentication and authorization flows
  - Add email/password login and registration
  - Add Google Sign-In and persistent authenticated sessions
  - Add auth-aware user profile/header state
  - Redirect clients to the homepage/account after authentication
  - Add protected admin authentication and role-based access control
  - Add admin bootstrap email configuration for persistent production admin access
  - Make the primary admin account configurable and deployment-safe

- Build complete client account system
  - Add user profile and account dashboard
  - Add upcoming consultation details and Google Meet access
  - Add unified purchase/payment history
  - Include paid consultations, free consultations, product orders,
    Academy memberships, courses, PDFs, and future catalog products
  - Add persistent user cart with guest localStorage support
  - Merge guest cart into server cart after authentication
  - Add cart visibility and purchase information to admin customer management

- Implement booking and consultation lifecycle
  - Support Strategy Call, In-Person Consultation, and Free Open Consultation
  - Make Free Open Consultation completely free with automatic confirmation
  - Generate Google Meet sessions for confirmed consultations
  - Add live availability and working-hours management
  - Add consultation duration and booking buffer configuration
  - Add dynamic booking prices controlled from admin settings
  - Enforce configured prices server-side to prevent client-side price tampering
  - Standardize all booking and transaction currency to USD
  - Add booking confirmation and lifecycle status management
  - Automatically transition past sessions to ENDED
  - Add manual Mark Ended functionality
  - Track rescheduled sessions and reschedule counts
  - Add duplicate-slot protection

- Implement complete no-show and rescheduling workflows
  - Add admin no-show management
 